fix top menu z-index / fix create repo select parent mobile friendly

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.max-w-1\/2 {
+  max-width: 50% !important;
+}
+
 .link {
   @apply text-blue-600 hover:text-blue-500
 }
